# nda-automation

./: .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  clause_taxonomy.yaml  description-proposals.md  dogfood-result.md  package.json  playbook.json  pyproject.toml  render.yaml  requirements-ci.txt
.github/workflows/: ci.yml
docs/: DETAILED.md  GMAIL_CONNECT.md  OVERVIEW.md  PERSISTENT_STORAGE.md  PROCESS_ROLES.md  SCALE_READINESS.md  how-the-ai-reviews.md  overview-tab-spec.md  phase-6-backend-design.md  user-guide.html
nda_automation/: __init__.py  ai_assessment_contract.py  ai_assessment_prompt.py  ai_assessor.py  ai_first_review.py  ai_review.py  ai_runtime.py  ai_verifier.py  annotated_pdf_export.py  app_settings.py  approval.py  artifact_registry.py  artifact_service.py  checker.py  clause_fragment_merge.py  clause_localization.py  clause_outcomes.py  concept_classifier.py  content_fingerprint.py  contract_structure.py  corpus_index.py  counterparty_extraction.py  counterparty_naming.py  csrf.py  dashboard_assistant.py  dashboard_assistant_ai.py  dashboard_search_intent.py  decision_arbiter.py  definition_poison_check.py  deployment.py  disk_janitor.py  document_limits.py  document_rendering.py  docusign_connection.py  docusign_integration.py  docusign_test_double.py  docusign_workflow.py  docx_comments.py  docx_export.py  docx_health.py  (+107 more)
nda_automation/checks/: __init__.py  common.py  confidential_information.py  context.py  governing_law.py  mutuality.py  non_circumvention.py  registry.py  signatures.py  term_and_survival.py
nda_automation/fixtures/: frozen_clause_adapter.json
nda_automation/routes/: __init__.py  admin.py  approval.py  auth.py  common.py  corpus.py  dashboard.py  docusign.py  drive.py  entities.py  fill.py  generation.py  gmail.py  matters.py  notifications.py  pdf_markup.py  playbook.py  review.py  send_document.py
nda_automation/templates/: generic_nda.docx
proposed-skills/skill-hardening/: SKILL.md  description-when-not-what.md  loop-details.md  pressure-taxonomy.md
samples/: fail-nda.txt  pass-nda.txt
scripts/: cache_bust_guard.py
scripts/hooks/: pre-commit
static/: app.js  asset-tokens.json  developer-guide.html  index.html  prototype.html  styles.css  user-guide.html
static/css/: corpus.css  overview.css  redesign.css  repository.css
static/js/: admin-access.js  admin-ai.js  admin-docusign.js  admin-drive.js  admin-entities.js  admin-health.js  admin-integrations.js  admin-models.js  admin-onboarding.js  admin-personalisation.js  app-state.js  auth-expired.js  auth-session.js  clause-status.js  config.js  contract-structure-view.js  corpus.js  dashboard-search.js  document-download-menu.js  docusign-send.js  docx-faithful-render.js  draft-intake.js  find-replace.js  generator-editor.js  html-utils.js  inline-diff.js  manual-upload.js  matter-utils.js  notifications.js  onboarding.js  pdf-markup.js  playbook-draft-runtime.js  playbook-onboarding.js  playbook-view.js  redline-rendering.js  repository-actions.js  repository-api.js  repository-board.js  repository-detail.js  repository-model.js  (+11 more)
tests/: conftest.py  counsel_eval.py  counsel_eval_template.csv  counsel_eval_template.json  docx_redline_contract.py  gen_verify_ai_driver.py  gen_verify_harness.py  gen_verify_runner.py  pdf_reading_order_harness.py  real_api_eval.py  review_eval.py  reviewer_real_eval.py  test_acceptance_rightofway.py  test_add_clause_ai_review.py  test_admin_health_cost_frontend.py  test_admin_integrations_frontend.py  test_admin_manager.py  test_ai_assessment_contract.py  test_ai_assessment_prompt.py  test_ai_assessor.py  test_ai_first_review.py  test_ai_reasoning_steps.py  test_ai_review.py  test_ai_runtime.py  test_ai_verifier.py  test_annotated_pdf_export.py  test_approval_gate.py  test_artifact_registry.py  test_async_review_backend.py  test_board_poll_playbook_once.py  test_bulk_archive.py  test_cache_bust_guard.py  test_checker.py  test_ci_required_inclusions.py  test_clause_fixtures.py  test_clause_fragment_merge.py  test_clause_localization.py  test_clause_outcomes_cat_a.py  test_concept_classifier.py  test_contract_structure.py  (+219 more)
tests/fixtures/: README.md  generate_inline_diff_vectors.mjs  inline_diff_vectors.json  inline_diff_vectors.source.json  make_tracked_changes_docx.py  review_eval_cases.json  (+4 more)
(+142 files in other folders)
