[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nda-automation"
version = "0.1.0"
description = "A small NDA hard-clause checker."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-docx>=1.1",
]

[project.optional-dependencies]
pdf = [
  "PyMuPDF>=1.24",
  "pdf2docx>=0.5.8",
  "pypdf>=6.0",
]
gmail = [
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
]

[tool.setuptools.packages.find]
include = ["nda_automation*"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]
