[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nda-automation"
version = "0.1.0"
description = "A small NDA hard-clause checker."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-docx>=1.1",
]

[project.optional-dependencies]
pdf = [
  "PyMuPDF>=1.24",
  "pdf2docx>=0.5.8",
  "pypdf>=6.0",
]
gmail = [
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
]
# Table-augmentation backends for NDA_TABLE_AUGMENTATION_ENABLED. The camelot
# `stream` tail (opencv-headless + pandas + numpy) is ~223MB; camelot is
# LAZY-imported (only when a keyword-gated page is processed) so the resident cost
# stays deferred and the feature no-ops cleanly if the import is absent.
#   * camelot-py pinned to the 1.x line: 2.0.0 restructured backends/extras, so
#     pin to the tested shape (>=1.0,<2).
#   * opencv-python-headless floor is 4.8.1.78 — the >=4.5 floor admitted
#     CVE-2023-4863 (HIGH libwebp OOB write). headless (no GUI/X11 libs) keeps the
#     slim server image small and needs no extra apt packages.
#   * `stream` needs NO Ghostscript binary (only camelot `lattice` does), so this
#     extra adds ZERO apt packages to the Dockerfile.
tables = [
  "camelot-py>=1.0,<2",
  "opencv-python-headless>=4.8.1.78",
]
# Lighter pure-Python alternative backend, swappable behind the same interface.
tables-lite = [
  "pdfplumber>=0.10",
]

[tool.setuptools.packages.find]
include = ["nda_automation*"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]
